apps/downloader/headphones/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headphones
  namespace: downloader
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: headphones
spec:
  type: ClusterIP
  ports:
    - port: 8181
      targetPort: 8181
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: headphones
